--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
       <div id="routeCheckboxes"></div>
     </div>
 
+
+<div class="filter-group">
+  <strong>Route + Day Layers</strong>
+  <div id="routeDayLayers"></div>
+</div>
+
+
+    
     <div class="filter-group">
       <div class="filter-header">
         <strong>Days</strong>
