--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 </header>
 
 <div class="app-container">
-  
+   <!-- MOBILE DARK OVERLAY -->
+  <div class="mobile-overlay"></div>
 <button id="toggleSidebarBtn" class="sidebar-toggle">❮</button>
   <aside class="sidebar">
 
