--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
 <script src="app.js" defer></script>
-
+<!-- MOBILE Selected Stops Button -->
+<button id="mobileSelectionBtn">Selected: 0</button>
 
 </body>
 </html>
