--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 
 
 </header>
-
+  
+  <!-- MOBILE DARK OVERLAY -->
+  <div class="mobile-overlay" id="mobileOverlay"></div>
 <div class="app-container">
-   <!-- MOBILE DARK OVERLAY -->
-  <div class="mobile-overlay"></div>
+  
 <button id="toggleSidebarBtn" class="sidebar-toggle">❮</button>
   <aside class="sidebar">
 
