--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
   <h1>TEST TDS-PAK</h1>
   <p>Drag & drop an Excel file to visualize routes by day</p>
   <button id="mobileMenuBtn">☰ Menu</button>
-  
+  <button id="hardRefreshBtn" class="primary-btn header-refresh">
+  ⟳ Refresh
+  </button>
+
 
 
 </header>
