--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 <header>
   <h1>TEST TDS-PAK</h1>
   <p>Drag & drop an Excel file to visualize routes by day</p>
-  <button id="mobileMenuBtn">☰ Menu</button>
-  <button id="hardRefreshBtn" class="primary-btn header-refresh">
-  ⟳ Refresh
-  </button>
 
-
-
+  <div class="mobile-header-buttons">
+    <button id="hardRefreshBtn">⟳ Refresh</button>
+    <button id="mobileMenuBtn">☰ Menu</button>
+  </div>
 </header>
+
   
   <!-- MOBILE DARK OVERLAY -->
   <div class="mobile-overlay" id="mobileOverlay"></div>
