--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <p>Drag & drop an Excel file to visualize routes by day</p>
 
   <div class="mobile-header-buttons">
-    <button id="hardRefreshBtn" class="primary-btn">⟳</button>
+    <button id="hardRefreshBtn" class="primary-btn">⟳ Refresh</button>
     <button id="mobileMenuBtn">☰ Menu</button>
   </div>
 </header>
