--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 <script src="app.js" defer></script>
 <!-- MOBILE Selected Stops Button -->
 <button id="mobileSelectionBtn">Selected: 0</button>
+<button id="locateBtn" title="Center on my location">📍</button>
 
 </body>
 </html>
