--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
     Clear Selection
   </button>
 
+   <!-- live tracking button -->
+  <button id="locateMeBtn" class="sidebar-btn">Locate</button>
+
+  
 </div>
 
 
@@ -168,7 +172,7 @@
 <script src="app.js" defer></script>
 <!-- MOBILE Selected Stops Button -->
 <button id="mobileSelectionBtn">Selected: 0</button>
-<button id="locateMeBtn" title="Center on my location">📍</button>
+
 
 </body>
 </html>
