--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <div class="mobile-header-buttons">
     <button id="hardRefreshBtn" class="primary-btn">⟳ Refresh</button>
     <button id="mobileMenuBtn">☰ Menu</button>
+    <button id="locateMeBtn" class="primary-btn">📍</button>
   </div>
 </header>
 
@@ -118,9 +119,9 @@
   <button id="clearSelectionBtn" class="primary-btn">
     Clear Selection
   </button>
+  <div id="desktopLocateContainer"></div>
 
-   <!-- live tracking button -->
-  <button id="locateMeBtn" class="sidebar-btn">Locate</button>
+   
 
   
 </div>
