--- a/index.html
+++ b/index.html
@@ -76,9 +76,17 @@
 
     
 <div class="filter-group">
-  <strong>Route + Day Layers</strong>
+  <div class="filter-header">
+    <strong>Route + Day Layers</strong>
+    <div>
+      <button class="mini-btn" id="routeDayAll">All</button>
+      <button class="mini-btn" id="routeDayNone">None</button>
+    </div>
+  </div>
+
   <div id="routeDayLayers"></div>
 </div>
+
 
 
 
