--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <button id="hardRefreshBtn" class="primary-btn">⟳ Refresh</button>
     <button id="mobileMenuBtn">☰ Menu</button>
     <button id="locateMeBtn" class="primary-btn">📍</button>
+    <button id="completeStopsBtnMobile" class="primary-btn">✔</button>
+
   </div>
 </header>
 
@@ -127,7 +129,12 @@
   <button id="clearSelectionBtn" class="primary-btn">
     Clear Selection
   </button>
+  
   <div id="desktopLocateContainer"></div>
+  
+  <button id="completeStopsBtn" class="primary-btn">
+  Complete Stops
+</button>
 
    
 
