--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
       <ul id="savedFiles"></ul>
     </div>
 
+
+    
+<div class="filter-group">
+  <label>
+    <input type="checkbox" id="toggleDelivered" checked>
+    Delivered
+  </label>
+</div>
+
+
+
+    
     <div class="filter-group">
       <div class="filter-header">
         <strong>Routes</strong>
