--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
 
     
 <div class="filter-group">
-  <label>
-    <input type="checkbox" id="toggleDelivered" checked>
-    Delivered
-  </label>
+  <strong>Delivered</strong>
+  <div id="deliveredControls"></div>
 </div>
+
 
 
 
