--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="https://unpkg.com/leaflet-pip@1.1.0/leaflet-pip.min.js"></script>
 
 <script src="app.js" defer></script>
 <!-- MOBILE Selected Stops Button -->
