--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
   Complete Stops
 </button>
 
-   <button id="undoDeliveredBtn">Undo Delivered</button>
+   <button id="undoDeliveredBtn" class="primary-btn undo-btn">
+  Undo Delivered
+</button>
+
 
 
   
