--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     <button id="locateMeBtn" class="primary-btn">📍</button>
     <button id="completeStopsBtnMobile" class="primary-btn">✔</button>
 
-    
+    <label style="margin-left:15px; font-size:14px;">
+  <input type="checkbox" id="streetLabelToggle" checked>
+  Street Labels
+</label>
+
 
   </div>
 </header>
