--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <button id="mobileMenuBtn">☰ Menu</button>
     <button id="locateMeBtn" class="primary-btn">📍</button>
     <button id="completeStopsBtnMobile" class="primary-btn">✔</button>
+    <label class="street-toggle mobile-only">
+  <input type="checkbox" id="streetLabelToggleMobile" checked>
+  Street
+</label>
 
     
 
