--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 </button>
 
 <label style="margin-left:15px; font-size:14px;">
-  <input type="checkbox" id="streetLabelToggle" checked>
+  <input type="checkbox" id="streetLabelToggle">
   Street Labels
 </label>
 
