--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
 
 
 <header>
-  <h1>TEST TDS-PAK</h1>
+
+  <div class="header-top">
+    <h1>TEST TDS-PAK</h1>
+
+    <label class="theme-toggle">
+      <input type="checkbox" id="sunModeToggle">
+      ☀ Sun Mode
+    </label>
+  </div>
+
   <p>Drag & drop an Excel file to visualize routes by day</p>
 
   <div class="mobile-header-buttons">
@@ -31,11 +40,10 @@
     <button id="mobileMenuBtn">☰ Menu</button>
     <button id="locateMeBtn" class="primary-btn">📍</button>
     <button id="completeStopsBtnMobile" class="primary-btn">✔</button>
-  
-    
-
   </div>
+
 </header>
+
 
   
   <!-- MOBILE DARK OVERLAY -->
