--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
 
 <header>
 
-  <div class="header-top">
-    <h1>TEST TDS-PAK</h1>
+ <div class="header-top">
 
-    <label class="theme-toggle">
-      <input type="checkbox" id="sunModeToggle">
-      ☀ Sun Mode
-    </label>
-  </div>
+  <button id="downloadFullExcelBtn" class="download-btn" title="Download Full Excel">
+    ⬇
+  </button>
+
+  <h1>TEST TDS-PAK</h1>
+
+  <label class="theme-toggle">
+    <input type="checkbox" id="sunModeToggle">
+    ☀ Sun Mode
+  </label>
+
+</div>
+
+
 
   <p>Drag & drop an Excel file to visualize routes by day</p>
 
